<?xml version="1.0" encoding="utf-8"?>
<!--
 ReminderMail is an Android app that will let you quickly send e-mail to
 a pre-defined address.

 Copyright (C) 2011 by Jan Ouwens

 This file is part of ReminderMail.

 ReminderMail is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 ReminderMail is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with ReminderMail.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="mail_app_name">ReminderMail</string>
    <string name="sharebox_app_name">\@ ReminderMail</string>

    <string name="config_app_name">ReminderMail Configuration</string>

    <string name="config_step0_remindermail">ReminderMail</string>
    <string name="config_step0_intro">So, you want to send yourself reminders. That\'s cool! But first, we need to set everything up. Don\'t worry, it\'s easy. Just follow these steps:</string>

    <string name="config_step1">Step 1</string>
    <string name="config_step1_title">Make sure you have a Google Contact for the e-mail address you want to use</string>
    <string name="config_step1_explanation">If you don\'t have one, you can create one now. Go ahead; I\'ll wait.</string>

    <string name="config_step2">Step 2</string>
    <string name="config_step2_title">Choose an e-mail address</string>
    <string name="config_step2_explanation">To choose an e-mail address, press the button and select a contact from the list.</string>
    <string name="config_step2_button">GO</string>
    <string name="config_step2_pick_mail">Choose an e-mail address</string>
    <string name="config_step2_empty">You haven\'t selected an e-mail address yet.</string>
    <string name="config_step2_name">Name:</string>
    <string name="config_step2_mail">E-mail:</string>

    <string name="config_step3">Step 3</string>
    <string name="config_step3_title">Add a subject prefix</string>
    <string name="config_step3_explanation">If you want, you can add a prefix to the subject of each mail that ReminderMail sends for you.</string>
    <string name="config_step3_extra_explanation">Don\'t worry; this is totally optional. But if you have one, ReminderMail will automatically place it between [square brackets].</string>
    <string name="config_step3_button">GO</string>
    <string name="config_step3_empty">The subject prefix is empty.</string>
    <string name="config_step3_prefix">Prefix:</string>
    <string name="config_step3_alert_title">Subject prefix</string>
    <string name="config_step3_alert_message">Type a prefix</string>
    <string name="config_step3_alert_set">Set prefix</string>
    <string name="config_step3_alert_clear">Clear prefix</string>

    <string name="config_step4">Step 4</string>
    <string name="config_step4_title">Put the ReminderMail icon on your home screen</string>
    <string name="config_step4_explanation">You\'ll have to do that yourself. But it\'s totally worth it, because that way, ReminderMail will always be within reach!</string>

    <string name="config_step5">Step 5</string>
    <string name="config_step5_title">Done!</string>
    <string name="config_step5_close">Get me out of here</string>
    <string name="config_step5_about">About this app</string>

    <string name="about_app_name">About ReminderMail</string>
    <string name="about_explanation">\
ReminderMail is an app that will let you quickly send e-mail to a pre-defined address.
This is useful to quickly send reminders to yourself, or to an online ToDo-list application (such as &lt;a href=\"http://www.nirvanahq.com\">NirvanaHQ&lt;/a>).
    </string>
    <string name="about_shortcut">Move the ReminderMail icon to your home screen for easy access, or share pages via \"@ ReminderMail\".</string>
    <string name="about_limitations">Note that ReminderMail only supports one e-mail address.</string>
    <string name="about_copyright">Copyright (C) 2011 by Jan Ouwens</string>
    <string name="about_website">\
This program is free software, released under the GNU General Public License.
For more information, visit the &lt;a href=\"http://jqno.github.com/remindermail\">website&lt;/a>.
    </string>
    <string name="about_close">Close</string>
</resources>
