<?xml version="1.0" encoding="utf-8"?>
<!--
 QuickMail is an Android app that will let you quickly send e-mail to
 a pre-defined address.

 Copyright (C) 2011 by Jan Ouwens

 This file is part of QuickMail.

 QuickMail is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 QuickMail is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with QuickMail.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="30dip">
    <TextView
        android:id="@+id/about_explanation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_explanation" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_shortcut" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_limitations" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=" " />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_copyright" />
    <TextView
        android:id="@+id/about_website"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_website" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=" " />
    <Button
        android:id="@+id/about_close"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_close" />
</LinearLayout>
